Attempt to fix hero section resizing on mobile when scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ nav>button {
 
 /* HERO SECTION */
 .hero {
-    min-height: 90svh;
+    min-height: 90lvh;
     width: 100%;
     background: url('../images/nebula-background-wavy.jpg') no-repeat center center;
     padding-top: 120px;
@@ -99,7 +99,7 @@ nav>button {
 .services-section img {
     display: block;
     margin: 0 auto;
-    height: 25vh;
+    height: 25lvh;
     width: auto;
 }
 .services-section h2 {
